# -ternlang

./: # SESSION_2025-09-01.md  1+1=3.prompt.yml  13_anchors_for_collaboration.txt  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DZNA — Division-by-Zero Neutrality Axiom.md  FALLBACK_PROTOCOL.md  FALLBACK_PROTOCOL.sh  IBAIE_2025-09-01.commit (1).txt  IBAIE_2025-09-01.manifest (1).json  IBAIE_2025-09-01.min.json  IBAIE_2025-09-01.pretty.json  IBAIE_2025-09-01.schema (1).json  LICENSE  LICENSE.txt  README.md  REGENERATIVE FINANCE ACT.md  RELEASES.md  SECURITY.md  SIGMA_MINDSET.txt  SOUL.md  _config.yml  airlock_schema.json  commands.md  error.txt  final_blessing.txt  hammurabi.prompt.yml  ibaie_pedalgate_crosswalk.md  ibdir.json  ibdir_README.md  index.md  kernel_post_mint_protocol.md  manifestation_clause.json  manifestation_clause.md  mirror_of_truth.py  package-lock.json  psalm_23.md  qlc.yaml  quantum_logic_clock.py  (+7 more)
.github/: dependabot.yml
13/: A Ternary Logic Mixture-of-Experts Model for Enhanced Sparse Activation and Synergistic Routing.txt  Makefile  bruno.md  bruno.txt  cheatsheet.md  config_io.py  𒀯.json  (+2 more)
ternkernel/: README.md  pyproject.toml
ternkernel/examples/: mini_pipeline.py
ternkernel/ternkernel/: __init__.py
ternkernel/ternkernel/adapters/: numpy_bridge.py
ternkernel/ternkernel/agents/time_crystal/: agent.py
ternkernel/ternkernel/api/: __init__.py  server.py
ternkernel/ternkernel/core/: resilience.py  ternary.py
ternkernel/ternkernel/kernel/: cli.py  event_bus.py  policy.py  scheduler.py
ternkernel/tests/: test_safety.py  test_ternary.py
(+255 files in other folders)
